force-app/main/default/objects/Beat__c/fields/Max_Stops__c.field-meta.xml
<CustomField>
    <fullName>Max_Stops__c</fullName>
    <label>Max Stops</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>20</defaultValue>
    <description>Max Stops</description>
</CustomField>