force-app/main/default/objects/Beat__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <label>Sales Representative</label>
    <type>Lookup</type>
    <referenceTo>Sales_Representative__c</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Assigned_Beats</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Representative</description>
</CustomField>