force-app/main/default/objects/Beat__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Beats</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory</description>
</CustomField>